[gd_scene load_steps=5 format=3 uid="uid://bsyh3u1gjes0l"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_xrdhm"]
[ext_resource type="PackedScene" uid="uid://0tm7bxn4ad4o" path="res://Scenes/Character/Animations/game_anim_v02.tscn" id="2_txcjv"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fcxd1"]
height = 1.86043
radius = 0.65

[sub_resource type="SphereShape3D" id="SphereShape3D_mxqey"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_xrdhm")

[node name="3d_Model" type="Node3D" parent="."]
transform = Transform3D(-0.990753, 0, 0.135681, 0, 1, 0, -0.135681, 0, -0.990753, 8.0841, 0, -5.58709)

[node name="game_animations" parent="3d_Model" instance=ExtResource("2_txcjv")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 7.94939, 2.04261, -5.3926)
shape = SubResource("CylinderShape3D_fcxd1")

[node name="Camera_Mount" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.999988, -0.00349063, -0.00349065, 0.00349065, 0.999994, -1.74846e-07, 0.00349063, -1.20098e-05, 0.999994, 13.6621, 4.24283, -3.46642)

[node name="SpringArm3D" type="SpringArm3D" parent="Camera_Mount"]
transform = Transform3D(0.999998, -0.00176224, 0.0011334, 0.00113342, 0.909926, 0.414769, -0.00176223, -0.414767, 0.909926, 0.00293303, 0.840618, -2.38419e-07)
shape = SubResource("SphereShape3D_mxqey")
spring_length = 10.0

[node name="Camera3D" type="Camera3D" parent="Camera_Mount/SpringArm3D"]
transform = Transform3D(1, -5.2969e-09, -6.40284e-09, -4.65661e-10, 1, 1.49012e-07, -3.49246e-10, 0, 1, -0.0177956, -1.69334, -3.40445)
